# cloudmark

./: .gitignore  README.md  app.py  file_utils.py  local-setup.ps1  local-setup.sh  pyproject.toml  stack.yml  yaml_utils.py
modules/: second-sub-stack.yml  sub-stack.yml
test/: test_app.py  test_file_utils.py  test_yaml_utils.py
